# local-whisper-dictation

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  bynum-dictate-hotkey.desktop.in  bynum_dictate.py  bynum_dictate_common.py  bynum_dictate_hotkey.py  bynum_dictate_once.py  bynum_dictate_overlay.py  bynum_dictate_restart.py  bynum_dictate_tray.py  install.sh  local-whisper-hotkey.desktop.in  local_whisper.py  local_whisper_common.py  local_whisper_dictate.py  local_whisper_hotkey.py  local_whisper_overlay.py  local_whisper_restart.py  local_whisper_text_render.py  local_whisper_tray.py  pyproject.toml  requirements-cuda.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  RELEASE_CHECKLIST.md
tests/: test_common.py
