[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bynum-dictate"
version = "0.1.0"
description = "Local hold-to-dictate speech-to-text for Linux/X11 with optional NVIDIA GPU support."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bynum Dictate contributors" }]
keywords = ["whisper", "dictation", "speech-to-text", "linux", "nvidia", "x11"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "faster-whisper>=1.1.1",
  "Pillow>=10.0",
  "python-xlib>=0.33",
]

[project.optional-dependencies]
cuda = [
  "nvidia-cublas-cu12>=12.0",
  "nvidia-cudnn-cu12>=9.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
bynum-dictate = "bynum_dictate:main"
bynum-dictate-once = "bynum_dictate_once:main"
bynum-dictate-hotkey = "bynum_dictate_hotkey:main"
bynum-dictate-restart = "bynum_dictate_restart:main"

[project.urls]
Homepage = "https://github.com/ZacharyBynum/bynum-dictate"
Issues = "https://github.com/ZacharyBynum/bynum-dictate/issues"

[tool.setuptools]
py-modules = [
  "bynum_dictate",
  "bynum_dictate_common",
  "bynum_dictate_once",
  "bynum_dictate_hotkey",
  "bynum_dictate_overlay",
  "bynum_dictate_restart",
  "bynum_dictate_text_render",
  "bynum_dictate_tray",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"bynum_dictate_tray.py" = ["E402"]
